# TryNovate-Website

./: .replit  README.md  app.py  database.py  pyproject.toml
css/: style.css
templates/: application_form.html  banner.html  footer.html  home.html  jobitem.html  nav.html
